# rag-v2

./: .env.example  .gitignore  =0.5.0  README.md  golden-dataset.txt  golden_dataset.txt  golder-dataset.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.cursor/: mcp.json
.pip-mcp-check/httpx-0.28.1.dist-info/: RECORD
.pip-mcp-check/jsonschema-4.26.0.dist-info/: RECORD
.pip-mcp-check/mcp-1.27.0.dist-info/: RECORD
.pip-mcp-check/python_dotenv-1.2.2.dist-info/: RECORD
.pip-mcp-check/pywin32-311.dist-info/: RECORD
.pip-mcp-check/uvicorn-0.44.0.dist-info/: RECORD
app/: config.py  main.py
app/data/: skills_lexicon.txt
app/routers/: __init__.py  query.py  resume_analytics.py  upload.py  vectors.py
app/services/: disaster_query.py  hybrid_retrieval.py  query.py  rag.py  resume_analytics.py  vectors.py
app/static/: analytics.html  chat.html  visualize.html
mcp_csv_server_pkg/: README.md  pyproject.toml
mcp_csv_server_pkg/mcp_csv_server/: __init__.py  __main__.py  disasters.py  paths.py  server.py
mcp_csv_server_pkg/tests/: test_disasters.py  test_server.py
openspec/changes/conditional-hybrid-query-retrieval/: .openspec.yaml
openspec/specs/api-router/: spec.md
openspec/specs/app-config/: spec.md
openspec/specs/app-entrypoint/: spec.md
openspec/specs/batch-upload/: spec.md
openspec/specs/pdf-upload/: spec.md
scripts/: run_golden_dataset.py
tests/: test_disaster_query.py  test_golden_dataset_script.py  test_hybrid_retrieval.py  test_query.py  test_rag.py  test_upload.py
(+70 files in other folders)
