[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-app"
version = "0.1.0"
description = "FastAPI boilerplate application"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.9",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-chroma>=0.1.0",
    "langchain-huggingface>=0.1.0",
    "langchain-anthropic>=0.2.0",
    "sentence-transformers>=3.0.0",
    "pypdf>=4.0.0",
    "chromadb>=0.5.0",
    "umap-learn>=0.5.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = ["data/*.txt"]
